--- a/Homepage.html
+++ b/Homepage.html
@@ -178,7 +178,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-10.jpg" alt="">
+                        <img src="images/cert10.jpg" alt="">
                         <div class="text">The Arduino Platform and C programming</div>
                         <p>Coursera <a href="https://drive.google.com/file/d/11gZPXmQM-KTB7DSw4k3Nlt_awGS8yUv-/view?usp=sharing" target="_blank" rel="noopener noreferrer" style="color: darkgreen;">View here</a></p>
                     </div>
