--- a/Homepage.html
+++ b/Homepage.html
@@ -152,7 +152,7 @@
                     <div class="box">
                         <img src="images/cert6.jpg" alt="">
                         <div class="text">Internet of Things</div>
-                        <p>Coursera <a href="https:/drive.google.com/file/d/11TkCKTyXSOyNV28olZsGfSklzWgp3RCK/view?usp=sharing" target="_blank" rel="noopener noreferrer" style="color: darkgreen;">View here</a></p>
+                        <p>Coursera <a href="https://drive.google.com/file/d/11TkCKTyXSOyNV28olZsGfSklzWgp3RCK/view?usp=sharing" target="_blank" rel="noopener noreferrer" style="color: darkgreen;">View here</a></p>
                     </div>
                 </div>
                 <div class="card">
